# rinha-24

./: Cargo.toml  Dockerfile  README.md  dev.sh  docker-compose.yml  nginx.conf
.sqlx/: query-203525c20e47cd8aa779b3e8d309a5ccf617904b2087022edea5457dfc739d2c.json  query-2615643577a88c347c086458f2bf85b37e23eabfd7f1403c62360eee071dfe4b.json  query-2ea24f9a9ac2700624b54927719d053f1c043726c7444d714a3b42761d819f8e.json  query-3d94313cf36d0a8e1ab922e069d099a590aa9183415abb504dae2bb8406e207a.json  query-4ba4005ef1e6c7c61b1349dee7393037ada321b9762dd16fff985b55db2c8a56.json  query-852a9e0637eff354be5bf63f90c9bb873d740728df5b9f79846bb101c50f5a2f.json  query-acfa068913dd437d38b993377bb47201f4a312de7c6a66139ba97b5ba45e05b0.json  query-c3f0b951df817733d3106750ebafdba4689300f431cbc93b4daefac7d75a4042.json
migrations/: 20240205183949_create_clients_table.down.sql  20240205183949_create_clients_table.up.sql  20240210230211_create_transactions_table.up.sql  20240216010118_create_alter_balance_function.down.sql  20240216010118_create_alter_balance_function.up.sql
src/: api.rs  config.rs  db.rs  main.rs  state.rs
src/domains/: client.rs  cliente.rs
